change to chess piece mechanics